<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.myappportfolio.MainActivityFragment"
    tools:showIn="@layout/activity_main"
    android:background="@color/colorContentBackground"
    android:layout_width="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:gravity="top">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginBottom="13dp"
        android:id="@+id/textView3" />

    <Button
        android:text="@string/main_button1_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:background="@color/colorAccent"
        android:elevation="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:layout_below="@+id/textView3" />

    <Button
        android:text="@string/main_button2_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:background="@color/colorAccent"
        android:elevation="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button1"
        android:layout_marginBottom="12dp" />

    <Button
        android:text="@string/main_button3_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:background="@color/colorAccent"
        android:elevation="1dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button2"
        android:layout_marginBottom="12dp" />

    <Button
        android:text="@string/main_button4_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:background="@color/colorAccent"
        android:elevation="1dp"
        android:layout_below="@+id/button3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp" />

    <Button
        android:text="@string/main_button5_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:background="@color/colorAccent"
        android:elevation="1dp"
        android:layout_below="@+id/button4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp" />

    <Button
        android:text="@string/main_button6_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:background="@color/colorAccent"
        android:elevation="1dp"
        android:layout_below="@+id/button5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp" />

</RelativeLayout>
